tests/ui/infinite/struct-field-with-diverging-assoc-type.next.stderr
error[E0271]: type mismatch resolving `<u8 as Trait>::Diverges<u8> normalizes-to _`
  --> $DIR/struct-field-with-diverging-assoc-type.rs:14:12
   |
LL |     field: Box<<u8 as Trait>::Diverges<u8>>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
